--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  animation-duration: 200ms;
+}
+
+html {
+  overflow-x: hidden;
+}
+
+body {
+  scrollbar-gutter: stable;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+body > .w-full > * {
+  width: 100%;
+}
+
+.bg-store {
+  background: linear-gradient(
+    180deg,
+    #040011 13.77%,
+    #202b3c 27.29%,
+    #202b3c 27.29%
+  );
+}
