feat: store navibar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,11 +3,11 @@
   <div class="flex">
     <div class="flex gap-4">
       <!-- Navigate Buttons -->
-      <div class="flex text-txt-dim duration-200 items-center justify-center">
+      <div class="flex text-txt-dim items-center justify-center">
         <button class="w-8 h-8 hover:text-txt duration-200">
           <svg-chevron class="" />
         </button>
-        <button class="w-8 h-8 hover:text-txt duration-200 rotate-180">
+        <button class="w-8 h-8 hover:text-txt rotate-180 duration-200">
           <svg-chevron class="" />
         </button>
       </div>
@@ -19,7 +19,7 @@
     </div>
     <!-- Menu Buttons -->
     <div
-      class="flex gap-16 pl-16 uppercase font-medium items-center justify-center"
+      class="flex gap-8 pl-16 uppercase font-medium items-center justify-center"
     >
       <a href="#" class="text-primary">Store</a>
       <a href="#">Community</a>
@@ -59,11 +59,11 @@
 
     <!-- Help / View Buttons -->
     <div class="pl-8 flex items-center justify-center">
-      <button class="text-txt-dim duration-200 hover:text-txt h-full px-2">
+      <button class="text-txt-dim hover:text-txt h-full px-2 duration-200">
         Help
       </button>
       <button
-        class="text-txt-dim duration-200 hover:text-txt h-full px-4 flex gap-1 items-center justify-center"
+        class="text-txt-dim hover:text-txt h-full px-4 flex gap-1 items-center justify-center duration-200"
       >
         View
         <span class="w-5 -rotate-90"><svg-chevron /></span>
@@ -71,13 +71,19 @@
     </div>
     <!-- Window Buttons -->
     <div class="flex items-center justify-center">
-      <button class="w-6 px-2 box-content text-txt-dim hover:text-txt duration-200">
+      <button
+        class="w-6 px-2 box-content text-txt-dim hover:text-txt duration-200"
+      >
         <svg-minimize />
       </button>
-      <button class="w-6 px-2 box-content text-txt-dim hover:text-txt duration-200">
+      <button
+        class="w-6 px-2 box-content text-txt-dim hover:text-txt duration-200"
+      >
         <svg-window />
       </button>
-      <button class="w-6 px-2 box-content text-txt-dim hover:text-acc-red duration-200">
+      <button
+        class="w-6 px-2 box-content text-txt-dim hover:text-acc-red duration-200"
+      >
         <svg-cross />
       </button>
     </div>
