--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -1,4 +1,7 @@
 <app-navbar
   class="w-full bg-bg flex items-center justify-center text-txt px-4 p-2"
 />
+<app-store-navibar
+  class="w-full bg-bg-tertiary flex justify-center text-txt px-3 p-2"
+/>
 <div class="w-full bg-store border border-txt">store works!</div>
