feat: hero & featured on store

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,11 +21,11 @@
     <div
       class="flex gap-8 pl-16 uppercase font-medium items-center justify-center"
     >
-      <a href="#" class="text-primary">Store</a>
-      <a href="#">Community</a>
-      <a href="#">Ygg</a>
-      <a href="#">Library</a>
-      <a href="#">Downloads</a>
+      <app-btn-page class="text-primary">Store</app-btn-page>
+      <app-btn-page>Community</app-btn-page>
+      <app-btn-page>Ygg</app-btn-page>
+      <app-btn-page>Library</app-btn-page>
+      <app-btn-page>Downloads</app-btn-page>
     </div>
   </div>
 
