--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -4,4 +4,9 @@
 <app-store-navibar
   class="w-full bg-bg-tertiary flex justify-center text-txt px-3 p-2"
 />
-<div class="w-full bg-store border border-txt">store works!</div>
+<div class="w-full bg-store h-[6600px] flex items-center flex-col gap-32">
+  <app-store-hero />
+  <div class="max-w-[1380px] w-full flex flex-col items-center">
+    <app-store-featured class="w-full" />
+  </div>
+</div>
