feat: finish featured (for now)

--- a/src/app/components/wishlist-btn/wishlist-btn.component.html
+++ b/src/app/components/wishlist-btn/wishlist-btn.component.html
@@ -1,9 +1,9 @@
 <button
   (mouseenter)="toggleIcon(true)"
   (mouseleave)="toggleIcon(false)"
-  class="flex gap-2 p-2 px-4 bg-bg-high hover:bg-bg-hover duration-200 rounded"
+  class="flex gap-2 p-2 px-4 bg-bg-high hover:bg-bg-hover duration-200 rounded text-sm items-center"
 >
-  {{ icon ? "" : "Whishlist" }}
+  {{ icon ? "" : "Wishlist" }}
   <svg-favorite-border *ngIf="!fillIcon" />
   <svg-favorite *ngIf="fillIcon" />
 </button>
