--- a/src/app/pages/store/components/store-featured/game/game.component.html
+++ b/src/app/pages/store/components/store-featured/game/game.component.html
@@ -45,14 +45,12 @@
     </div>
 
     <!-- Wishlist / Price -->
-    <div class="flex justify-between">
+    <div class="flex justify-between gap-4">
       <app-wishlist-btn />
-      <div class="flex gap-4 items-center">
-        <div>
-          <p class="text-lg font-medium">$ {{ data.current_price }}</p>
-        </div>
+      <div class="flex items-center gap-4">
+        <app-price-btn [data]="data" />
         <button
-          class="rounded bg-secondary p-2 px-8 text-lg hover:bg-acc-green duration-200 hover:text-bg"
+          class="rounded bg-secondary p-2 px-6 text-lg hover:bg-acc-green duration-200 hover:text-bg"
         >
           Buy Now
         </button>
