design: raw special offers

--- a/src/app/pages/store/components/store-featured/game/game.component.html
+++ b/src/app/pages/store/components/store-featured/game/game.component.html
@@ -1,6 +1,8 @@
-<div class="bg-bg p-4 w-full flex lg:flex-row flex-col gap-4 items-center">
+<div
+  class="bg-bg p-4 w-full flex lg:flex-row flex-col gap-4 items-center rounded"
+>
   <!-- Main Image -->
-  <div class="h-[458px] lg:w-7/12 w-full">
+  <div class="h-[458px] lg:w-7/12 w-full rounded overflow-hidden">
     <img [src]="mainImageUrl" alt="" class="object-cover w-full h-full" />
   </div>
 
