--- a/src/app/pages/store/components/store-featured/store-featured.component.html
+++ b/src/app/pages/store/components/store-featured/store-featured.component.html
@@ -2,7 +2,7 @@
   <h3 class="text-lg uppercase font-medium">Featured</h3>
   <!-- Caroussel -->
   <div
-    class="flex w-full bg-bg bg-opacity-20 py-4"
+    class="flex w-full bg-bg bg-opacity-20 py-4 rounded"
     (mouseenter)="pauseCountdown()"
     (mouseleave)="pauseCountdown()"
   >
