--- a/src/app/pages/store/components/hero/hero.component.html
+++ b/src/app/pages/store/components/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="w-screen h-[765px] flex items-center justify-center">
+<div class="h-[765px] flex items-center justify-center">
   <img
     src="../../../../../assets/storesummersale.gif"
     alt=""
