--- a/src/app/pages/store/components/featured/featured.component.html
+++ b/src/app/pages/store/components/featured/featured.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex flex-col gap-8">
+<div class="flex flex-col gap-8 px-8">
   <h3 class="text-lg uppercase font-medium">Featured</h3>
   <!-- Caroussel -->
   <div
