--- a/src/app/pages/store/components/navibar/navibar.component.html
+++ b/src/app/pages/store/components/navibar/navibar.component.html
@@ -1,15 +1,15 @@
 <div class="max-w-screen-2xl w-full flex items-center justify-between gap-2">
   <!-- Menu -->
   <div class="flex gap-2">
-    <app-store-navibar-btn class="bg-secondary rounded"
-      >Home</app-store-navibar-btn
+    <app-btn class="bg-secondary rounded"
+      >Home</app-btn
     >
-    <app-store-navibar-btn>Browse</app-store-navibar-btn>
-    <app-store-navibar-btn>Discover</app-store-navibar-btn>
-    <app-store-navibar-btn>Points Shop</app-store-navibar-btn>
-    <app-store-navibar-btn>Curators</app-store-navibar-btn>
-    <app-store-navibar-btn>Gift Card</app-store-navibar-btn>
-    <app-store-navibar-btn>News</app-store-navibar-btn>
+    <app-btn>Browse</app-btn>
+    <app-btn>Discover</app-btn>
+    <app-btn>Points Shop</app-btn>
+    <app-btn>Curators</app-btn>
+    <app-btn>Gift Card</app-btn>
+    <app-btn>News</app-btn>
   </div>
 
   <!-- Search -->
@@ -30,8 +30,8 @@
   <!-- Right -->
   <div class="flex gap-2">
     <!-- Wishlist -->
-    <app-store-navibar-btn>Wishlist</app-store-navibar-btn>
-    <app-store-navibar-btn>Cart</app-store-navibar-btn>
+    <app-btn>Wishlist</app-btn>
+    <app-btn>Cart</app-btn>
     <button
       class="bg-txt-dim bg-opacity-10 w-6 h-6 box-content p-2 text-txt-dim hover:text-txt duration-200 rounded"
     >
