--- a/src/app/pages/store/components/navibar/btn/btn.component.html
+++ b/src/app/pages/store/components/navibar/btn/btn.component.html
@@ -1,5 +1,3 @@
-<button
-  class="flex px-6 p-2 rounded relative hover-highlight duration-200 break-keep min-w-26"
->
+<button class="flex px-6 p-2 rounded duration-200">
   <ng-content />
 </button>
