--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -1,4 +1,6 @@
-<app-navbar class="bg-bg flex items-center justify-center text-txt px-4 p-2" />
+<app-navbar
+  class="bg-bg flex items-center justify-center text-txt px-4 pr-6 p-2"
+/>
 <app-navibar class="bg-bg-tertiary flex justify-center text-txt px-3 p-2" />
 <div class="bg-store h-[6600px] flex items-center flex-col gap-32">
   <app-hero />
