--- a/src/app/pages/store/components/navibar/navibar.component.html
+++ b/src/app/pages/store/components/navibar/navibar.component.html
@@ -1,9 +1,7 @@
 <div class="max-w-screen-2xl w-full flex items-center justify-between gap-2">
   <!-- Menu -->
   <div class="flex gap-2">
-    <app-btn class="bg-secondary rounded"
-      >Home</app-btn
-    >
+    <app-btn class="bg-secondary rounded">Home</app-btn>
     <app-btn>Browse</app-btn>
     <app-btn>Discover</app-btn>
     <app-btn>Points Shop</app-btn>
@@ -12,23 +10,23 @@
     <app-btn>News</app-btn>
   </div>
 
-  <!-- Search -->
-  <div
-    class="flex bg-bg bg-opacity-20 rounded h-full w-full max-w-md overflow-hidden"
-  >
-    <input
-      type="text"
-      title="Search"
-      placeholder="Search"
-      class="pl-4 h-full flex-grow bg-transparent placeholder-secondary"
-    />
-    <button class="w-6 text-secondary px-4 box-content">
-      <svg-search />
-    </button>
-  </div>
-
   <!-- Right -->
-  <div class="flex gap-2">
+  <div class="flex gap-2 items-center h-full">
+    <!-- Search -->
+    <div
+      class="flex bg-bg bg-opacity-20 rounded h-full max-w-md overflow-hidden"
+    >
+      <input
+        type="text"
+        title="Search"
+        placeholder="Search"
+        class="pl-4 h-full flex-grow bg-transparent placeholder-secondary"
+      />
+      <button class="w-6 text-secondary px-4 box-content">
+        <svg-search />
+      </button>
+    </div>
+
     <!-- Wishlist -->
     <app-btn>Wishlist</app-btn>
     <app-btn>Cart</app-btn>
