--- a/src/app/components/navbar/menu/menu.component.html
+++ b/src/app/components/navbar/menu/menu.component.html
@@ -1,5 +1,34 @@
-<app-btn-page class="text-primary">Store</app-btn-page>
-<app-btn-page>Community</app-btn-page>
-<app-btn-page>Ygg</app-btn-page>
-<app-btn-page>Library</app-btn-page>
-<app-btn-page>Downloads</app-btn-page>
+<app-btn-page
+  [label]="'Store'"
+  [url]="'#'"
+  [subPages]="[{ label: 'Label 1', url: '#' }]"
+  class="relative"
+/>
+
+<app-btn-page
+  [label]="'Community'"
+  [url]="'#'"
+  [subPages]="[{ label: 'Label 1', url: '#' }]"
+  class="relative"
+/>
+
+<app-btn-page
+  [label]="'Ygg'"
+  [url]="'#'"
+  [subPages]="[{ label: 'Label 1', url: '#' }]"
+  class="relative"
+/>
+
+<app-btn-page
+  [label]="'Library'"
+  [url]="'#'"
+  [subPages]="[{ label: 'Label 1', url: '#' }]"
+  class="relative"
+/>
+
+<app-btn-page
+  [label]="'Downloads'"
+  [url]="'#'"
+  [subPages]="[{ label: 'Label 1', url: '#' }]"
+  class="relative"
+/>
