--- a/src/app/components/navbar/menu/menu.component.html
+++ b/src/app/components/navbar/menu/menu.component.html
@@ -1,34 +1,60 @@
 <app-btn-page
   [label]="'Store'"
   [url]="'#'"
-  [subPages]="[{ label: 'Label 1', url: '#' }]"
-  class="relative"
+  [subPages]="[
+    { label: 'Home', url: '#' },
+    { label: 'Browse', url: '#' },
+    { label: 'Discover', url: '#' },
+    { label: 'Wishlist', url: '#' },
+    { label: 'Cart', url: '#' },
+    { label: 'Points Shop', url: '#' },
+    { label: 'Gift Cards', url: '#' },
+    { label: 'News', url: '#' },
+    { label: 'Stats', url: '#' }
+  ]"
+  class="relative h-full flex items-center"
 />
 
 <app-btn-page
   [label]="'Community'"
   [url]="'#'"
-  [subPages]="[{ label: 'Label 1', url: '#' }]"
-  class="relative"
+  [subPages]="[
+    { label: 'Home', url: '#' },
+    { label: 'Duscussions', url: '#' },
+    { label: 'Market', url: '#' },
+    { label: 'Workshop', url: '#' },
+    { label: 'Broadcasts', url: '#' }
+  ]"
+  class="relative h-full flex items-center"
 />
 
 <app-btn-page
   [label]="'Ygg'"
   [url]="'#'"
-  [subPages]="[{ label: 'Label 1', url: '#' }]"
-  class="relative"
+  [subPages]="[
+    { label: 'Profile', url: '#' },
+    { label: 'Friends & Groups', url: '#' },
+    { label: 'Inventory', url: '#' },
+    { label: 'Badges', url: '#' }
+  ]"
+  class="relative h-full flex items-center"
 />
 
 <app-btn-page
   [label]="'Library'"
   [url]="'#'"
-  [subPages]="[{ label: 'Label 1', url: '#' }]"
-  class="relative"
+  [subPages]="[
+    { label: 'Home', url: '#' },
+    { label: 'Collections & Groups', url: '#' },
+    { label: 'Game Servers', url: '#' },
+    { label: 'Activate a Product', url: '#' },
+    { label: 'Add a non-Steam Game', url: '#' }
+  ]"
+  class="relative h-full flex items-center"
 />
 
 <app-btn-page
   [label]="'Downloads'"
   [url]="'#'"
-  [subPages]="[{ label: 'Label 1', url: '#' }]"
-  class="relative"
+  class="relative h-full flex items-center"
 />
