--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
 
     <!-- Menu -->
     <app-menu
-      class="xl:flex gap-8 pl-16 uppercase font-medium items-center justify-center hidden"
+      class="xl:flex gap-8 pl-16 items-center justify-center hidden"
     />
   </div>
 
