--- a/src/app/components/navbar/menu-mobile/menu-mobile.component.html
+++ b/src/app/components/navbar/menu-mobile/menu-mobile.component.html
@@ -1,30 +1,115 @@
-<a
-  href="#"
-  class="text-3xl border-b border-txt-dim border-opacity-30 pb-6 w-full hover:text-primary duration-200"
->
-  Store
-</a>
-<a
-  href="#"
-  class="text-3xl border-b border-txt-dim border-opacity-30 pb-6 w-full hover:text-primary duration-200"
->
-  Community
-</a>
-<a
-  href="#"
-  class="text-3xl border-b border-txt-dim border-opacity-30 pb-6 w-full hover:text-primary duration-200"
->
-  Ygg
-</a>
-<a
-  href="#"
-  class="text-3xl border-b border-txt-dim border-opacity-30 pb-6 w-full hover:text-primary duration-200"
->
-  Library
-</a>
-<a
-  href="#"
-  class="text-3xl border-b border-txt-dim border-opacity-30 pb-6 w-full hover:text-primary duration-200"
->
-  Downloads
-</a>
+<div class="flex flex-col pt-16 w-[90vw] bg-bg text-right justify-between">
+  <div>
+    <app-btn-page
+      [label]="'Store'"
+      [url]="'#'"
+      [subPages]="[
+        { label: 'Home', url: '#' },
+        { label: 'Browse', url: '#' },
+        { label: 'Discover', url: '#' },
+        { label: 'Wishlist', url: '#' },
+        { label: 'Cart', url: '#' },
+        { label: 'Points Shop', url: '#' },
+        { label: 'Gift Cards', url: '#' },
+        { label: 'News', url: '#' },
+        { label: 'Stats', url: '#' }
+      ]"
+      class="relative flex items-center"
+    />
+
+    <app-btn-page
+      [label]="'Community'"
+      [url]="'#'"
+      [subPages]="[
+        { label: 'Home', url: '#' },
+        { label: 'Duscussions', url: '#' },
+        { label: 'Market', url: '#' },
+        { label: 'Workshop', url: '#' },
+        { label: 'Broadcasts', url: '#' }
+      ]"
+      class="relative flex items-center"
+    />
+
+    <app-btn-page
+      [label]="'Ygg'"
+      [url]="'#'"
+      [subPages]="[
+        { label: 'Profile', url: '#' },
+        { label: 'Friends & Groups', url: '#' },
+        { label: 'Inventory', url: '#' },
+        { label: 'Badges', url: '#' }
+      ]"
+      class="relative flex items-center"
+    />
+
+    <app-btn-page
+      [label]="'Library'"
+      [url]="'#'"
+      [subPages]="[
+        { label: 'Home', url: '#' },
+        { label: 'Collections & Groups', url: '#' },
+        { label: 'Game Servers', url: '#' },
+        { label: 'Activate a Product', url: '#' },
+        { label: 'Add a non-Steam Game', url: '#' }
+      ]"
+      class="relative flex items-center"
+    />
+
+    <app-btn-page
+      [label]="'Downloads'"
+      [url]="'#'"
+      class="relative flex items-center"
+    />
+  </div>
+
+  <div class="flex gap-4 w-full p-4 justify-end">
+    <!-- Friends -->
+    <div>
+      <!-- Button -->
+      <button
+        title="Friends"
+        class="flex justify-center items-center p-4 text-txt-dim bg-bg-high rounded hover:text-txt hover:bg-bg-hover gap-3 text-sm h-full duration-200"
+      >
+        <svg-people class="w-7 h-7" />
+      </button>
+    </div>
+
+    <!-- Notifications -->
+    <div>
+      <!-- Button -->
+      <button
+        title="Friends"
+        class="relative flex justify-center items-center p-4 text-txt-dim bg-bg-high rounded hover:text-txt hover:bg-bg-hover gap-3 text-sm h-full duration-200"
+      >
+        <div
+          class="absolute -top-1 -right-1 rounded-full bg-primary px-[6px] text-bg font-medium flex items-center justify-center"
+        >
+          2
+        </div>
+        <svg-notification class="w-7 h-7" />
+      </button>
+    </div>
+
+    <!-- Profile -->
+    <div class="max-sm:w-full">
+      <button
+        #toggleButton
+        class="flex justify-between items-center px-2 p-1 text-txt-dim bg-bg-high rounded hover:text-txt hover:bg-bg-hover gap-3 text-sm h-full duration-200 w-full"
+        title="Profile"
+      >
+        <div class="flex gap-2 items-center">
+          <span class="w-7 h-7 text-txt"><svg-chevron /></span>
+          <span class="">$12.45</span>
+        </div>
+        <div class="flex gap-4 items-center">
+          <span class="text-txt">YggProfile</span>
+          <img
+            src="https://pbs.twimg.com/profile_images/1774980059800956928/ssqG7x5k_400x400.jpg"
+            alt="Profile Picture"
+            class="w-12 h-12 box-content rounded"
+          />
+        </div>
+      </button>
+    </div>
+  </div>
+</div>
