--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -1,5 +1,5 @@
 <app-navbar
-  class="bg-bg flex items-center justify-center text-txt px-4 pr-6 p-2"
+  class="bg-bg flex items-center justify-center text-txt px-4 pr-6 p-2 h-14"
 />
 <app-navibar class="bg-bg-tertiary flex justify-center text-txt px-3 p-2" />
 <div class="bg-store h-[6600px] flex items-center flex-col gap-32">
