--- a/src/app/components/navbar/menu/menu.component.html
+++ b/src/app/components/navbar/menu/menu.component.html
@@ -1,18 +1,18 @@
 <app-btn-page
   [label]="'Store'"
-  [url]="'#'"
+  [url]="'/store'"
   [subPages]="[
-    { label: 'Home', url: '#' },
-    { label: 'Browse', url: '#' },
-    { label: 'Discover', url: '#' },
-    { label: 'Wishlist', url: '#' },
-    { label: 'Cart', url: '#' },
-    { label: 'Points Shop', url: '#' },
-    { label: 'Gift Cards', url: '#' },
-    { label: 'News', url: '#' },
-    { label: 'Stats', url: '#' }
+    { label: 'Home', url: '/store' },
+    { label: 'Browse', url: '/store/browse' },
+    { label: 'Discover', url: '/store/discover' },
+    { label: 'Wishlist', url: '/store/wishlist' },
+    { label: 'Cart', url: '/store/cart' },
+    { label: 'Points Shop', url: '/store/points-shop' },
+    { label: 'Gift Cards', url: '/store/gift-card' },
+    { label: 'News', url: '/store/news' },
+    { label: 'Stats', url: '/store/stats' }
   ]"
-  class="relative h-full flex items-center"
+  class="relative flex h-full items-center"
 />
 
 <app-btn-page
@@ -25,7 +25,7 @@
     { label: 'Workshop', url: '#' },
     { label: 'Broadcasts', url: '#' }
   ]"
-  class="relative h-full flex items-center"
+  class="relative flex h-full items-center"
 />
 
 <app-btn-page
@@ -37,7 +37,7 @@
     { label: 'Inventory', url: '#' },
     { label: 'Badges', url: '#' }
   ]"
-  class="relative h-full flex items-center"
+  class="relative flex h-full items-center"
 />
 
 <app-btn-page
@@ -50,11 +50,11 @@
     { label: 'Activate a Product', url: '#' },
     { label: 'Add a non-Steam Game', url: '#' }
   ]"
-  class="relative h-full flex items-center"
+  class="relative flex h-full items-center"
 />
 
 <app-btn-page
   [label]="'Downloads'"
   [url]="'#'"
-  class="relative h-full flex items-center"
+  class="relative flex h-full items-center"
 />
