--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -1,10 +1,10 @@
 <app-navbar
-  class="bg-bg flex items-center justify-center text-txt px-4 pr-6 p-2 h-14"
+  class="flex h-14 items-center justify-center bg-bg p-2 px-4 pr-6 text-txt"
 />
-<app-navibar class="bg-bg-tertiary flex justify-center text-txt px-3 p-2" />
-<div class="bg-store h-[6600px] flex items-center flex-col gap-32">
+<app-navibar class="flex justify-center bg-bg-tertiary p-2 px-3 text-txt" />
+<div class="bg-store flex h-[6600px] flex-col items-center gap-32">
   <app-hero />
-  <div class="max-w-[1380px] w-screen flex flex-col items-center gap-16">
+  <div class="flex w-screen max-w-[1380px] flex-col items-center gap-16">
     <!-- Featured -->
     <app-featured class="w-full" />
 
