add:store routes

--- a/src/app/components/navbar/menu/menu.component.html
+++ b/src/app/components/navbar/menu/menu.component.html
@@ -17,44 +17,44 @@
 
 <app-btn-page
   [label]="'Community'"
-  [url]="'#'"
+  [url]="'/community'"
   [subPages]="[
-    { label: 'Home', url: '#' },
-    { label: 'Duscussions', url: '#' },
-    { label: 'Market', url: '#' },
-    { label: 'Workshop', url: '#' },
-    { label: 'Broadcasts', url: '#' }
+    { label: 'Home', url: '/community' },
+    { label: 'Duscussions', url: '/community/discussions' },
+    { label: 'Market', url: '/community/market' },
+    { label: 'Workshop', url: '/community/workshop' },
+    { label: 'Broadcasts', url: '/community/broadcasts' }
   ]"
   class="relative flex h-full items-center"
 />
 
 <app-btn-page
   [label]="'Ygg'"
-  [url]="'#'"
+  [url]="'/profile'"
   [subPages]="[
-    { label: 'Profile', url: '#' },
-    { label: 'Friends & Groups', url: '#' },
-    { label: 'Inventory', url: '#' },
-    { label: 'Badges', url: '#' }
+    { label: 'Profile', url: '/profile' },
+    { label: 'Friends & Groups', url: '/profile/friends-and-groups' },
+    { label: 'Inventory', url: '/profile/inventory' },
+    { label: 'Badges', url: '/profile/badges' }
   ]"
   class="relative flex h-full items-center"
 />
 
 <app-btn-page
   [label]="'Library'"
-  [url]="'#'"
+  [url]="'/library'"
   [subPages]="[
-    { label: 'Home', url: '#' },
-    { label: 'Collections & Groups', url: '#' },
-    { label: 'Game Servers', url: '#' },
-    { label: 'Activate a Product', url: '#' },
-    { label: 'Add a non-Steam Game', url: '#' }
+    { label: 'Home', url: '/library' },
+    { label: 'Collections & Groups', url: '/library/collections-and-groups' },
+    { label: 'Game Servers', url: '/library/game-servers' },
+    { label: 'Activate a Product', url: '/library/activate-product' },
+    { label: 'Add a non-Steam Game', url: '/library/add-non-steam-game' }
   ]"
   class="relative flex h-full items-center"
 />
 
 <app-btn-page
   [label]="'Downloads'"
-  [url]="'#'"
+  [url]="'/downloads'"
   class="relative flex h-full items-center"
 />
